--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -1123,11 +1123,23 @@ function checkAndResetAt8IfNeeded(){
 
 function normalizeSeiriNo(s){ return String(s||"").trim().replace(/\s+/g,""); }
 function cutQR(qr){ 
-  const cleaned = String(qr || "").replace(/^[\s:&;]+/, '');
+  const original = String(qr || "");
+  // 先頭の記号（スペース、コロン、アンド、セミコロン、シングルクォート）のみを除去
+  // 数字やアルファベットは保持
+  const cleaned = original.replace(/^[\s:&;']+/, '');
   const match = cleaned.match(/^[^\s]+/);
-  if (!match) return '';
+  if (!match) {
+    updateDebugLog(`⚠️ cutQR: マッチなし "${original}"`);
+    return '';
+  }
   const firstWord = match[0];
-  return firstWord.substr(0, CUT_LENGTH);
+  const result = firstWord.substr(0, CUT_LENGTH);
+  
+  if(DEBUG_QR && original !== result){
+    updateDebugLog(`✂️ cutQR: "${original}" → cleaned:"${cleaned}" → word:"${firstWord}" → result:"${result}"`);
+  }
+  
+  return result;
 }
 function esc(s){ return String(s??"").replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
 
@@ -1586,7 +1598,7 @@ let buffer = "";
 let idleTimer = null;
 let scanInProgress = false;
 let lastKeyTime = 0;
-const IDLE_MS = 120;  // 200ms → 120msに短縮（QRスキャナーは高速）
+const IDLE_MS = 150;  // 120ms → 150msに延長（複数行データ対応）
 const MAX_BUFFER_LENGTH = 100;
 const RAPID_INPUT_THRESHOLD = 50; // 50ms以内の連続入力でスキャナーと判断
 
@@ -1611,8 +1623,32 @@ function flushBuffer(){
   
   updateDebugLog(`📋 正規化後の行数: ${lines.length}, 行内容: ${JSON.stringify(lines)}`);
   
-  // 最後の完全な行のみ処理
-  const qr = lines[lines.length - 1] || "";
+  // 有効な行をフィルタ（MIN_QR_LENGTH以上）
+  const validLines = lines.filter(line => line.length >= MIN_QR_LENGTH);
+  
+  if(validLines.length === 0){
+    updateDebugLog(`⚠️ 有効なQRデータなし（無視）`);
+    clearBuffer();
+    return;
+  }
+  
+  // 優先順位: 1) アルファベットで始まる行, 2) 最長行
+  const alphaLines = validLines.filter(line => /^[a-zA-Z]/.test(line.trim()));
+  
+  let qr = '';
+  if(alphaLines.length > 0){
+    // アルファベットで始まる行の中から最長のものを選択
+    qr = alphaLines.reduce((longest, current) => current.length > longest.length ? current : longest, '');
+    if(validLines.length > 1){
+      updateDebugLog(`✨ 複数行検出(${validLines.length}行) → アルファベット行を優先選択: "${qr}"`);
+    }
+  }else{
+    // アルファベット行がない場合は最長行を選択
+    qr = validLines.reduce((longest, current) => current.length > longest.length ? current : longest, '');
+    if(validLines.length > 1){
+      updateDebugLog(`⚠️ 複数行検出(${validLines.length}行) → 最長行を選択: "${qr}"`);
+    }
+  }
   
   clearBuffer();
   
@@ -1620,12 +1656,9 @@ function flushBuffer(){
     updateDebugLog(`✅ 処理開始: "${qr}" (長さ:${qr.length})`);
     processQR(qr);
   }else if(qr){
-    // デバッグモード時のみ表示
     if(DEBUG_QR){
       updateDebugLog(`⚠️ QR長さ不足: "${qr}" 長さ=${qr.length} < ${MIN_QR_LENGTH} (静かに無視)`);
     }
-  }else{
-    updateDebugLog(`⚠️ 空のQRデータ（無視）`);
   }
 }
 
@@ -1744,7 +1777,11 @@ document.addEventListener("keydown", (e)=>{
   
   if(k==="Enter" || k==="Tab"){ 
     updateDebugLog(`⏎ Enter/Tab検出 → flush`);
-    flushBuffer(); 
+    flushBuffer();
+    // フラッシュ後、確実にバッファをクリア
+    buffer = "";
+    scanInProgress = false;
+    if(idleTimer) { clearTimeout(idleTimer); idleTimer = null; }
     return; 
   }
   
@@ -1758,6 +1795,10 @@ document.addEventListener("keydown", (e)=>{
     idleTimer = setTimeout(()=>{
       updateDebugLog(`⏱️ タイムアウト(${IDLE_MS}ms) → flush`);
       flushBuffer();
+      // タイムアウト後も確実にクリア
+      buffer = "";
+      scanInProgress = false;
+      idleTimer = null;
     }, IDLE_MS);
   }else if(k==="Backspace"){
     buffer = buffer.slice(0,-1);
@@ -1778,6 +1819,11 @@ window.addEventListener("load", ()=>{
 
 /* ========== 照合処理 ========== */
 async function processQR(qrRaw){
+  // 処理開始時にバッファを強制クリア（次のスキャンへの影響を防ぐ）
+  buffer = "";
+  scanInProgress = false;
+  if(idleTimer) { clearTimeout(idleTimer); idleTimer = null; }
+  
   checkAndResetAt8IfNeeded();
   
   updateDebugLog(`🔍 QR処理: "${qrRaw}" (長さ:${String(qrRaw).length})`);
@@ -1809,13 +1855,19 @@ async function processQR(qrRaw){
       if(window.__getQtyBySeiriNo){
         const q = await window.__getQtyBySeiriNo(baseQR);
         qtyPerKanban = (typeof q === 'number' && isFinite(q) && q > 0) ? q : null;
-        updateDebugLog(`📦 かんばん数: ${qtyPerKanban}`);
+        if(qtyPerKanban === null){
+          updateDebugLog(`📦 かんばん数: 未設定（1個/QRとしてカウント）`);
+        }else{
+          updateDebugLog(`📦 かんばん数: ${qtyPerKanban}個/QR`);
+        }
       }else{
         qtyPerKanban = null;
+        updateDebugLog(`📦 かんばん数: 取得不可（1個/QRとしてカウント）`);
       }
     }catch(e){
       console.warn('LOAD_QTY failed:', e);
       qtyPerKanban = null;
+      updateDebugLog(`📦 かんばん数: エラー（1個/QRとしてカウント）`);
     }
     
     updateCountersUI();
@@ -1875,10 +1927,10 @@ async function processQR(qrRaw){
   
   if(judgedOK){
     showOK();
-    const q = (qtyPerKanban==null? 0 : qtyPerKanban);
-    deltaGood = (typeof q === "number" && isFinite(q) && q > 0) ? q : 0;
+    // qtyPerKanbanがnullまたは0以下の場合は1個としてカウント
+    deltaGood = (qtyPerKanban != null && qtyPerKanban > 0) ? qtyPerKanban : 1;
     goodCount += deltaGood;
-    updateDebugLog(`✅ OK判定: +${deltaGood} → 合計:${goodCount}`);
+    updateDebugLog(`✅ OK判定: +${deltaGood} (かんばん数:${qtyPerKanban}) → 合計:${goodCount}`);
     updateCountersUI();
     persistLineStatus("SCAN_OK");
     logRow([now, qrRaw, sliced, "OK", "UNLOCK", "", lineName, bushoName, prodStatus], {good:deltaGood});
@@ -2138,10 +2190,14 @@ $planSaveBtn.addEventListener('click', ()=>{
     if(!key) return null;
     try{
       const snap = await getDoc(doc(db, QR_MASTER_COLLECTION, key));
-      if(!snap.exists()) return null;
+      if(!snap.exists()) {
+        // データが存在しない場合はnullを返す（呼び出し側で1としてカウント）
+        return null;
+      }
       const data = snap.data() || {};
       const q = Number(data.quantity);
-      return (isFinite(q) && q > 0) ? q : 1;
+      // quantityが有効な数値の場合はその値を、無効な場合はnullを返す
+      return (isFinite(q) && q > 0) ? q : null;
     }catch(e){
       console.warn("getQty error:", e);
       return null;
