--- a/seizouqrmb.html
+++ b/seizouqrmb.html
@@ -1090,8 +1090,12 @@ function checkAndResetAt8IfNeeded(){
 }
 
 function normalizeSeiriNo(s){ return String(s||"").trim().replace(/\s+/g,""); }
+
 function cutQR(qr){ 
-  return normalizeSeiriNo(String(qr||"").substr(CUT_START, CUT_LENGTH)); 
+  // スペースで分割して最初の単語を取得
+  const str = String(qr || "").trim();
+  const firstWord = str.split(/\s+/)[0] || "";
+  return firstWord;
 }
 function esc(s){ return String(s??"").replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
 
