--- a/rackwms.html
+++ b/rackwms.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -178,30 +176,44 @@ body {
 }
 .tab-icon { font-size: 15px; display: block; margin-bottom: 2px; }
 
-/* 棚卸しモード時（スマホ・タブレット）: タブバーを非表示 */
-@media (max-width: 1023px) {
-  body.inv-mode .tabs { display: none !important; }
-}
-/* 棚卸し用メニューに戻るボタン */
-.inv-menu-btn {
-  display: none;
+/* ===== タブ非表示トグルボタン ===== */
+.tab-hide-btn {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  z-index: 500;
   background: var(--surface) !important;
   border: 1px solid var(--border) !important;
-  border-radius: 8px;
+  border-radius: 50%;
+  width: 40px; height: 40px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.4);
   color: var(--muted) !important;
   -webkit-text-fill-color: var(--muted);
-  font-size: 12px;
-  font-weight: 700;
-  padding: 6px 12px;
-  cursor: pointer;
-  letter-spacing: 0.5px;
-  white-space: nowrap;
-  align-items: center;
-  gap: 5px;
+  transition: all 0.2s;
+  user-select: none;
+}
+.tab-hide-btn:active { transform: scale(0.9); }
+/* タブが隠れているときは色を変えて目立たせる */
+body.tabs-hidden .tab-hide-btn {
+  background: var(--accent) !important;
+  border-color: var(--accent) !important;
+  color: var(--bg) !important;
+  -webkit-text-fill-color: var(--bg);
 }
 @media (max-width: 1023px) {
-  body.inv-mode .inv-menu-btn { display: inline-flex; }
+  .tab-hide-btn { display: flex; }
 }
+/* タブを非表示にする */
+@media (max-width: 1023px) {
+  body.tabs-hidden .tabs { display: none !important; }
+}
+
+
 
 /* ===== MAIN CONTENT ===== */
 .main {
@@ -1649,6 +1661,8 @@ input.inv-qty:focus { border-color: var(--accent) !important; }
   autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false"
   tabindex="-1" />
 
+<button class="tab-hide-btn" id="tab-hide-btn" onclick="toggleTabBar()" title="メニュー表示切替">☰</button>
+
 <div class="app-wrapper">
 
   <!-- ===== HEADER ===== -->
@@ -1992,16 +2006,12 @@ input.inv-qty:focus { border-color: var(--accent) !important; }
                 <div class="inv-session-title" id="inv-banner-title">📋 棚卸しセッション</div>
                 <div class="inv-session-meta" id="inv-banner-meta">セッションなし</div>
               </div>
-              <div style="display:flex;gap:6px;align-items:center">
-                <button class="inv-menu-btn" onclick="invExitMode()">☰ メニュー</button>
-                <button class="inv-btn-start" id="inv-btn-start" onclick="invStartSession()">▶ 開始</button>
-              </div>
+              <button class="inv-btn-start" id="inv-btn-start" onclick="invStartSession()">▶ 開始</button>
             </div>
           </div>
           <!-- 進行中: メーター + 終了ボタンのみ -->
           <div id="inv-banner-active" style="display:none">
-            <div style="display:flex;align-items:center;gap:8px">
-              <button class="inv-menu-btn" onclick="invExitMode()">☰</button>
+            <div style="display:flex;align-items:center;gap:10px">
               <div class="inv-sync-indicator" id="inv-sync-indicator">
                 <div class="inv-sync-dot"></div>同期中
               </div>
@@ -2163,6 +2173,12 @@ setInterval(updateClock, 1000);
 updateClock();
 
 /* ===================== タブ切替 ===================== */
+/* ===== タブバー表示切替 ===== */
+function toggleTabBar(){
+  document.body.classList.toggle('tabs-hidden');
+  // 非表示のときもタブ自体は動作するのでOK
+}
+
 function switchTab(tab, el){
   currentTab = tab;
   document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
@@ -2171,9 +2187,6 @@ function switchTab(tab, el){
 
   document.getElementById('sec-' + tab).classList.add('active');
   if(el) el.classList.add('active');
-
-  // 棚卸しモード: タブバーを非表示
-  document.body.classList.toggle('inv-mode', tab === 'inv');
 
   // sync sidebar
   const sidebarEl = document.getElementById('sidebar-' + tab);
@@ -2805,11 +2818,6 @@ function invGenerateSessionId(){
   return 'INV-' + Date.now().toString(36).toUpperCase();
 }
 
-/* ------- メニューに戻る（スマホ棚卸しモード解除） ------- */
-function invExitMode(){
-  const tabEl = document.getElementById('tab-in');
-  switchTab('in', tabEl);
-}
 
 /* ------- session start/end ------- */
 async function invStartSession(){
