--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -164,7 +164,7 @@
 
         .input-right {
             flex: 1;
-            height: 100%;
+            min-height: 0;
             display: flex;
             flex-direction: column;
             overflow: hidden;
@@ -257,6 +257,7 @@
         /* ===== RIGHT PANEL (INPUT) ===== */
         .input-form-area {
             flex: 1;
+            min-height: 0;
             padding: 16px;
             display: flex;
             flex-direction: column;
